--- a/_config.yml
+++ b/_config.yml
@@ -13,17 +13,17 @@ baseurl: ""
 lang: en
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: America/Winnipeg
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Recimeal # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Recimeal helps you create your next meal # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Recimeal helps you create your next meal. This recipe collection application allows you to quickly save, search and create recipes.al writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: ""
@@ -37,7 +37,7 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: Castlian Archi_Techs
   email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
@@ -77,10 +77,10 @@ theme_mode: # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn:
+img_cdn: 
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: "Recimeal.jpg"
 
 # boolean type, the global switch for TOC in posts.
 toc: true
