--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Castlian Archi_Techs
+  name: Castalian Archi_Techs
   email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
