--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ github:
   username: Cs-Sahil # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: Castalian_Techs # change to your twitter username
 
 social:
   # Change to your full name.
@@ -41,7 +41,7 @@ social:
   email: sharm56@myumanitoba.ca # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
+    - https://twitter.com/Castalian_Techs # change to your twitter homepage
     - https://github.com/Cs-Sahil # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
